# esm_bot

./: .env.example  .env.gpg  .env.test  .gitignore  .rubocop.yml  .standalone_migrations  .tool-versions  .travis.yml  CHANGELOG.md  Capfile  Cargo.toml  Dockerfile  Gemfile  README.md  Rakefile  TESTING.md  docker-compose.yml  ecosystem.config.js  esm.gemspec  flake.nix
.github/: CODEOWNERS  pull_request_template.md
.rubocop/: rspec.yml  strict.yml
changelog/: 2.0.0.yml
config/: config.yml  database.yml  deploy.rb  mapping.yml  message_type_mapping.yml  notifications.yml  puma.rb  symmetric-encryption.yml
config/arma_classes/: a3.yml  cup.yml  exile.yml  extended_base_mod.yml  extended_survival_pack.yml  ka.yml  ni_arms.yml  rhs.yml  secret_weapons.yml  sma.yml  tryk_mp_uniforms.yml  usaf.yml
config/deploy/: production.rb
config/message/: data_types.yml  metadata_types.yml
crates/tcp_server/: Cargo.toml
crates/tcp_server/src/: client_message.rs  connection.rs  lib.rs  main.rs  message.rs  server.rs
db/: schema.rb  seeds.rb
db/migrate/: 20190919022121_initial_db.rb  20210222002045_extension_v2.rb  20220203013142_add_access_roles_to_community.rb  20220203031859_user_notification_routes.rb  20230319214808_private_servers.rb  20230326003042_add_uuid_to_server.rb  20230420200747_fk_events.rb  20230513235724_create_api_tokens_table.rb  20230609223251_create_defaults_table.rb  20230907230118_cleanup.rb  20231025220103_public_ids.rb  20231027175108_command_details.rb  20231216163927_fix_null_server_names.rb  20240913210053_add_gamble_setting.rb  20241203010055_log_entries.rb  20241203183836_v2_enable.rb  20241205054419_server_config.rb  20241205054436_add_uuid_to_log_entries.rb  20241228032141_add_logging_reward_admin.rb  20241229054121_server_rewards.rb  20241230000715_cooldown_types.rb  20250123205434_remove_allow_v2_servers.rb  20250615003333_v2_enabled.rb
docker/: docker-compose.yml
docs/: bot_client_communication.txt
extension_server/: Cargo.toml
extension_server/src/: 1-old_server.rs  bot.rs  client.rs  client_manager.rs  connection_manager.rs  macros.rs  main.rs  request.rs  router.rs  server.rs
lib/: esm.rb  post_init.rb  post_init_dev.rb  pre_init.rb  pre_init_dev.rb  signal_handler.rb
lib/esm/: api.rb  bot.rb  callbacks.rb  color.rb  command.rb  connection.rb  database.rb  embed.rb  error_handler.rb  esm.rb  event.rb  exception.rb  extension.rb  inquirer.rb  json.rb  message.rb  model.rb  notifications.rb  regex.rb  service.rb  time.rb  version.rb  websocket.rb
server/: Cargo.toml  connection.rs  main.rs  server.rs
server/src/: connection.rs  server.rs
sorbet/rbi/: todo.rbi
spec/: config.rb  example.test_data.yml  methods.rb  pre_init.rb  spec_helper.rb  spec_helper_methods.rb  spec_helper_pre_init.rb
spec/@esm/: esms_object_embed_addField_spec.rb  esms_object_embed_add_field_spec.rb  esms_object_embed_create_spec.rb  (+26 more)
tasks/: cleanup.rake  commands.rake  define_commands.rake  migrate_rethinkdb.rake  migrations_server_rewards.rake
(+737 files in other folders)
