[package]
name = "esm_extension_server"
version = "0.1.0"
authors = ["Bryan <WolfkillArcadia@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
env_logger = "*"
esm_message = { path = "../../esm_arma/src/message/message" }
lazy_static = "1.4.0"
log = "*"
message-io = { version = "0.17", default-features = false, features = ["tcp"] }
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
rand = "*"
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "parking_lot"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "array-impls"] }
uuid = { version = "1.3", features = ["serde", "v4", "fast-rng"] }
