[package]
name = "tcp_server"
version = "0.1.0"
authors = ["Bryan <WolfkillArcadia@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
message-io = { version = "0.14", default-features = false, features = ["tcp"] }
log = "0.4.14"
env_logger = "0.8.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
parking_lot = "0.10"
tokio = { version = "1.5.0", features = ["full", "parking_lot"] }
redis = { version = "0.20.1", features = ["tokio-comp", "connection-manager"] }
esm_message = { git = "https://github.com/WolfkillArcadia/esm_message", branch = "main" }
