[package]
name = "tcp_server"
version = "0.1.0"
authors = ["Bryan <WolfkillArcadia@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
rutie = { version = "0.8", features=["no-link"] }
message-io = { version = "0.13", default-features = false, features = ["tcp"] }

# rutie-serde = "0.2"
# serde = "1.0"
# serde_derive = "1.0"
